--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
