--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" /> <!-- 接收短信权限 -->
     <uses-permission android:name="android.permission.READ_SMS" />    <!-- 读取短信权限 -->
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,17 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/MainStyle">
         <activity android:name=".activity.LoginActivity">
-        </activity>
-        <activity android:name=".activity.RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MainActivity">
-
-        </activity>
+        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name=".activity.MainActivity" />
     </application>
 
 </manifest>
