--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.8.0'
+    implementation 'com.blankj:utilcodex:1.25.2'
+    implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
