--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MainStyle">
+        <activity android:name=".activity.MainActivity"></activity>
+
         <meta-data
             android:name="android.notch_support"
             android:value="true" />
