--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MainStyle">
-        <activity android:name=".activity.MainActivity"></activity>
-
+        <activity android:name=".activity.MainActivity" />
         <meta-data
             android:name="android.notch_support"
             android:value="true" />
@@ -32,5 +31,4 @@
             android:name=".activity.RegisterActivity"
             android:launchMode="singleTask" />
     </application>
-
 </manifest>
