--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,6 @@
         </activity>
         <activity
             android:name=".activity.RegisterActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTop" />
     </application>
 </manifest>
