--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,4 +42,7 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.test.espresso:espresso-core:3.2.0'
+    debugImplementation 'com.didichuxing.doraemonkit:doraemonkit:3.0.0'
+    releaseImplementation 'com.didichuxing.doraemonkit:doraemonkit-no-op:3.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
